# agentic-engineering-training-embedded

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  justfile
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: requirements-reviewer.md  verification-reviewer.md
.claude/skills/trace-culina-context/: SKILL.md
.claude/skills/verify-culina/: SKILL.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  culina_app_main.cpp  culina_mcu_main.cpp  culina_sim_main.cpp
apps/ui/: culina_ui_main.cpp  device_view_model.cpp  device_view_model.h
apps/ui/qml/: Main.qml
cmake/: CompilerWarnings.cmake  FetchGoogleTest.cmake  Sanitizers.cmake
data/captures/: bad-crc.hex  startup.hex  truncated.hex
data/recipes/: bread_dough.rcp  custard.rcp  green_smoothie.rcp  hollandaise.rcp  hummus.rcp  mayonnaise.rcp  mulled_wine.rcp  pancake_batter.rcp  pesto.rcp  pizza_dough.rcp  porridge.rcp  rice_pudding.rcp  risotto.rcp  tomato_soup.rcp  veggie_stock.rcp
data/scenarios/checks/: boil_water.scn  knead_dough.scn  lid_interlock.scn  program_state.scn  sous_vide_hold.scn  turbo_cold.scn  weigh_flow.scn
data/scenarios/demo/: boil_water.scn  knead_dough.scn  sous_vide_egg.scn
docs/: c1link-protocol.md  safety-requirements.md
docs/datasheets/: heater-ntc.md  motor-driver-mx400.md
exercises/: README.md  m1-01-first-contact.md  m1-02-add-documentation.md  m1-02-context-window-audit.md  m1-03-datasheet-context.md  m1-04-prime-commands.md  m1-05-plan-mode-feature.md  m1-06-add-tests-to-core.md  m2-01-rules-split-criticality.md  m2-02-sim-verify-skill.md  m2-03-review-board.md  m2-04-sanitizer-hunt.md  m2-05-mcp-and-plugins.md  m2-06-ide-and-models.md  m2-07-hooks-and-plugins.md  m3-01-rpi-group-work.md  m4-01-hooks-guardrails.md  m4-02-quality-gate.md  m4-03-starter-kit.md  m4-04-agentic-sdlc-factory.md  setup.md
plugins/culina-evidence/.claude-plugin/: plugin.json
plugins/culina-evidence/skills/culina-evidence/: SKILL.md
scripts/: create-training-snapshot.sh  gate.sh  log-agent-stop.sh  perf-check.sh  run-clang-tidy.sh  run-ui.sh  verify-setup.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application_runtime.cpp  application_runtime.h  mcu_client.cpp  mcu_client.h  telemetry_store.cpp  telemetry_store.h
src/app/cooking/: cooking_controller.cpp  cooking_controller.h  dough_mode.cpp  dough_mode.h  guided_recipe.cpp  guided_recipe.h  manual_mode.cpp  manual_mode.h  program.h  sous_vide_mode.cpp  sous_vide_mode.h  steam_mode.cpp  steam_mode.h  turbo_pulse.cpp  turbo_pulse.h
src/app/ota/: ota_updater.cpp  ota_updater.h
src/app/recipe/: recipe.h  recipe_library.cpp  recipe_library.h  recipe_parser.cpp  recipe_parser.h
src/cli/: CMakeLists.txt  commands.cpp  commands.h  repl.cpp  repl.h  script_runner.cpp  script_runner.h
src/common/: CMakeLists.txt  crc16.cpp  crc16.h  logging.cpp  logging.h  parse_number.h  result.h  ring_buffer.h  time_types.h  units.h
src/hal/: CMakeLists.txt  i_clock.h  i_heater.h  i_lid.h  i_motor.h  i_scale.h  i_temp_sensor.h  i_uart.h  i_watchdog.h
src/mcu/: CMakeLists.txt  command_handler.cpp  command_handler.h  heater_pid.cpp  heater_pid.h  interlocks.cpp  interlocks.h  motor_controller.cpp  motor_controller.h  safety_limits.h  safety_mcu.cpp  safety_mcu.h  telemetry_publisher.cpp  telemetry_publisher.h
src/protocol/: CMakeLists.txt  c1link.h  frame_parser.cpp  frame_parser.h  frame_writer.cpp  frame_writer.h  link.cpp  link.h
src/sim/: CMakeLists.txt  in_memory_transport.h  lid_model.h  motor_model.cpp  motor_model.h  scale_model.cpp  scale_model.h  sim_board.cpp  sim_board.h  sim_clock.h  sim_control_server.cpp  sim_control_server.h  socket_transport.cpp  socket_transport.h  thermal_model.cpp  thermal_model.h
src/system/: CMakeLists.txt  system_sim.cpp  system_sim.h
tests/: CMakeLists.txt  two_process_disconnect.sh  two_process_smoke.sh  ui_smoke.sh
tests/integration/: commands_test.cpp  cooking_test.cpp  guided_recipe_test.cpp  mcu_client_test.cpp  mcu_link_test.cpp  scenario_check_test.cpp
tests/perf/: perf_check.cpp
tests/support/: flaky_transport.h  sim_fixture.h
tests/ui/: device_view_model_test.cpp
tests/unit/: application_runtime_test.cpp  crc16_test.cpp  frame_parser_test.cpp  heater_pid_test.cpp  link_test.cpp  motor_controller_test.cpp  ota_updater_test.cpp  parse_number_test.cpp  recipe_parser_test.cpp  result_test.cpp  ring_buffer_test.cpp  sim_board_test.cpp  sim_control_server_test.cpp  sim_models_test.cpp  telemetry_store_test.cpp
tools/: CMakeLists.txt  c1link_dump.cpp
